welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:9: error: type mismatch;
 found   : Unit
 required: Boolean
	if(vacation) {
        ^