welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	var weekday : Boolean = false ;
	var vacation : Boolean = false;
	
	if(weekday){
			return false ;
	
	}
	if(vacation) {
			return true ;
	}
}
